# juno_like

./: junoenv
B1/: CMakeLists.txt  exampleB1.cc
B1/include/: B1DetectorConstruction.hh  B1EventAction.hh  B1MaxTimeCuts.hh  B1MinEkineCuts.hh  B1PhysicsList.hh  B1PmtHit.hh  B1PmtSD.hh  B1PrimaryGeneratorAction.hh  B1SpecialCuts.hh  PMT.h
B1/src/: .B1PhysicsList.cc.swp  .B1PmtSD.cc.swp  B1ActionInitialization.cc  B1DetectorConstruction.cc  B1EventAction.cc  B1MaxTimeCuts.cc  B1MinEkineCuts.cc  B1PhysicsList.cc  B1PmtHit.cc  B1PmtSD.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  B1SpecialCuts.cc  B1SteppingAction.cc  OpticalProperty.icc
PMT_pos/: PMT.h  data  gen_xyz.py
